
Change Log Update (00.00.47)
* 2016-09-17
+ Worked more on the sign-up process,  Now saving user record and security record
  to the Sqlite database.  Still need a little work on the dates and best way
  to store and retrieve UTC date and times.
+ Also cleaned up the mod_signup code some and optimized the displayPrompts

Change Log Update (00.00.46)
* 2016-09-04
+ More work on the signup process.  Most of the questions are all set.
  Still small things for validation, some stuff for detection needed for backspace
  and then the final verify and save.  After that can start on the logon process.

Change Log Update (00.00.45)
* 2016-08-22
+ Added Several Updates and Fixes for Linux/OSX Terminals
+ Corrected Telnet Options for Echoing back and removing line mode
+ Removed check for duplicate options, so we can call more then one
  and expect just as many replies without endless loops.  Tested Good.
+ Added Clear Screen and home cursor for initial screen positions to match
  the local screen buffer.
+ For ansi screens in windows, replaced \n with \r\n on parsing ansi files.
  (Should also add detection if just \r or replace with \r\n also.
+ WIP need to add screen size change detection, if the screen size changes 
  we need to redraw the screen but also resize the local screen buffer to match
  so lightbar are still in the correct positions!  Important, but not vital just yet.

Change Log Update (00.00.44)
* 2016-08-21
+ Moved regexp fields expressions to the config file.
  Plan is to allow custom expressions for fields like handles and passwords etc..
+ Completed a few more new user app questions things.
+ Added Challenge Question/Answers to the Security Table for lost password
  If users don't like waiting on emails, etc, then can be ask a secondary question
  to reset their password. (Should we have multiple questions)?  One good for now.

Change Log Update (00.00.43)
* 2016-08-21
+ Created Security Table, Model and Dao for storing password and salt hashes